Add Google AdSense

--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
+<head> <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({
+    google_ad_client: "ca-pub-8067047785485978",
+    enable_page_level_ads: true
+  });
+</script>
+</head> 
+
 <h1>Eae Pessoal, como vcs vão? eu sou amigo do meu irmão</h1>
